Major debug and reorder of code/templates and expansion of the plugin capabilities

--- a/src/modules/Socialise/style/admin.css
+++ b/src/modules/Socialise/style/admin.css
@@ -1,3 +1,8 @@
+
+.socialize-docblock {
+    background-position: 13px 18px !important;
+}
+
 .z-icon-es-twitter {
     background: url("../images/twitterbird.gif") no-repeat scroll 0 50% transparent;
     padding: 2px 0 2px 20px;
