--- a/src/modules/Socialise/style/style.css
+++ b/src/modules/Socialise/style/style.css
@@ -1,3 +1,155 @@
+
+/* Twitter */
+.twitter-share-button {
+  vertical-align: middle;
+}
+
+/* ShareThis */
+#akst_form {
+  background: #999;
+  border: 1px solid #ddd;
+  display: none;
+  position: absolute;
+  width: 350px;
+  z-index: 999;
+}
+#akst_form a.akst_close {
+  color: #fff;
+  float: right;
+  margin: 5px;
+}
+#akst_form ul.tabs {
+  border: 1px solid #999;
+  list-style: none;
+  margin: 10px 10px 0 10px;
+  padding: 0;
+}
+#akst_form ul.tabs li {
+  background: #ccc;
+  border-bottom: 1px solid #999;
+  cursor: pointer;
+  float: left;
+  margin: 0 3px 0 0;
+  padding: 3px 5px 2px 5px;
+}
+#akst_form ul.tabs li.selected {
+  background: #fff;
+  border-bottom: 1px solid #fff;
+  cursor: default;
+  padding: 4px 5px 1px 5px;
+}
+#akst_form div.clear {
+  clear: both;
+  float: none;
+}
+#akst_social, #akst_email {
+  background: #fff;
+  border: 1px solid #fff;
+  padding: 10px;
+}
+#akst_social ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#akst_social ul li {
+  float: left;
+  margin: 0;
+  padding: 0;
+  width: 45%;
+}
+#akst_social ul li a {
+  background-position: 0px 2px;
+  background-repeat: no-repeat;
+  display: block;
+  float: left;
+  height: 24px;
+  padding: 4px 0 0 22px;
+  vertical-align: middle;
+}
+#akst_delicious {
+  background-image: url(../images/delicious.gif);
+}
+#akst_digg {
+  background-image: url(../images/digg.gif);
+}
+#akst_facebook {
+  background-image: url(../images/facebook.jpg);
+}
+#akst_furl {
+  background-image: url(../images/furl.gif);
+}
+#akst_netscape {
+  background-image: url(../images/netscape.gif);
+}
+#akst_yahoo_myweb {
+  background-image: url(../images/yahoo_myweb.gif);
+}
+#akst_stumbleupon {
+  background-image: url(../images/stumbleupon.gif);
+}
+#akst_twitter {
+  background-image: url(../images/twitter.png);
+}
+#akst_google_bmarks {
+  background-image: url(../images/google_bmarks.gif);
+}
+#akst_technorati {
+  background-image: url(../images/technorati.gif);
+}
+#akst_blinklist {
+  background-image: url(../images/blinklist.gif);
+}
+#akst_newsvine {
+  background-image: url(../images/newsvine.gif);
+}
+#akst_magnolia {
+  background-image: url(../images/magnolia.gif);
+}
+#akst_reddit {
+  background-image: url(../images/reddit.gif);
+}
+#akst_windows_live {
+  background-image: url(../images/windows_live.gif);
+}
+#akst_tailrank {
+  background-image: url(../images/tailrank.gif);
+}
+#akst_email {
+  display: none;
+  text-align: left;
+}
+#akst_email form, #akst_email fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+#akst_email fieldset legend {
+  display: none;
+}
+#akst_email ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+#akst_email ul li {
+  margin: 0 0 7px 0;
+  padding: 0;
+}
+#akst_email ul li label {
+  color: #555;
+  display: block;
+  margin-bottom: 3px;
+}
+#akst_email ul li input {
+  padding: 3px 10px;
+}
+#akst_email ul li input.akst_text {
+  padding: 3px;
+  width: 280px;
+}
+
+/* SexyBookmarks */
 div.sexy-bookmarks { margin:20px 0 0 0; clear: both !important; }
 div.sexy-bookmarks-expand { height: 29px; overflow: hidden; }
 .sexy-bookmarks-bg-sexy, .sexy-bookmarks-bg-caring, .sexy-bookmarks-bg-caring-old, .sexy-bookmarks-bg-love, .sexy-bookmarks-bg-wealth, .sexy-bookmarks-bg-enjoy
@@ -11,26 +163,26 @@ div.sexy-bookmarks-bg-german { padding:35px 0 0 20px !important; background-posi
 div.sexy-bookmarks ul.socials { width:100% !important; margin:0 !important; padding:0 !important; float: left !important; }
 div.sexy-bookmarks ul.socials { background:transparent none !important; border:0 none !important; outline:0 none !important; }
 div.sexy-bookmarks ul.socials li {
-	display:inline !important;
-	float:left !important;
-	list-style-type:none !important;
-	margin:0;
-	height:29px !important;
-	width:60px !important;
-	cursor:pointer !important;
-	padding:0 !important;
-	background-color:transparent !important;
-	border:0 none !important;
-	outline:0 none !important;
-	clear:none !important;
+  display:inline !important;
+  float:left !important;
+  list-style-type:none !important;
+  margin:0;
+  height:29px !important;
+  width:60px !important;
+  cursor:pointer !important;
+  padding:0 !important;
+  background-color:transparent !important;
+  border:0 none !important;
+  outline:0 none !important;
+  clear:none !important;
 }
 div.sexy-bookmarks ul.socials li:before, div.sexy-bookmarks ul.socials li:after, div.sexy-bookmarks ul.socials li a:before, div.sexy-bookmarks ul.socials li a:after { content:none !important; }
 div.sexy-bookmarks ul.socials a {
-	display:block !important;
-	width:60px !important;
-	height:29px !important;
-	text-indent: -9999px !important;
-	background-color:transparent !important;
+  display:block !important;
+  width:60px !important;
+  height:29px !important;
+  text-indent: -9999px !important;
+  background-color:transparent !important;
 }
 div.sexy-bookmarks ul.socials a:hover, div.sexy-bookmarks ul.socials li:hover { background-color:transparent !important; border:0 none !important; outline:0 none !important; }
 li.sexy-diigo, li.sexy-diigo:hover, li.sexy-digg, li.sexy-digg:hover, li.sexy-reddit, li.sexy-reddit:hover, li.sexy-stumbleupon, li.sexy-stumbleupon:hover, li.sexy-delicious, li.sexy-delicious:hover, li.sexy-yahoobuzz, li.sexy-yahoobuzz:hover, li.sexy-blinklist, li.sexy-blinklist:hover, li.sexy-technorati, li.sexy-technorati:hover, li.sexy-facebook, li.sexy-facebook:hover, li.sexy-twitter, li.sexy-twitter:hover, li.sexy-myspace, li.sexy-myspace:hover, li.sexy-mixx, li.sexy-mixx:hover, li.sexy-scriptstyle, li.sexy-scriptstyle:hover, li.sexy-designfloat, li.sexy-designfloat:hover, li.sexy-mail, li.sexy-mail:hover, li.sexy-comfeed, li.sexy-comfeed:hover, li.sexy-newsvine, li.sexy-newsvine:hover, li.sexy-devmarks, li.sexy-devmarks:hover, li.sexy-linkedin, li.sexy-linkedin:hover, li.sexy-sexy-googlebookmarks, li.sexy-sexy-googlebookmarks:hover, li.sexy-sexy-googlereader, li.sexy-sexy-googlereader:hover, li.sexy-googlebuzz, li.sexy-googlebuzz:hover, li.sexy-misterwong, li.sexy-misterwong:hover, li.sexy-izeby, li.sexy-izeby:hover, li.sexy-twittley, li.sexy-twittley:hover, li.sexy-tipd, li.sexy-tipd:hover, li.sexy-pfbuzz, li.sexy-pfbuzz:hover, li.sexy-friendfeed, li.sexy-friendfeed:hover, li.sexy-blogmarks, li.sexy-blogmarks:hover, li.sexy-fwisp, li.sexy-fwisp:hover, li.sexy-designmoo, li.sexy-designmoo:hover, li.sexy-bobrdobr, li.sexy-bobrdobr:hover, li.sexy-yandex, li.sexy-yandex:hover, li.sexy-memoryru, li.sexy-memoryru:hover, li.sexy-100zakladok, li.sexy-100zakladok:hover, li.sexy-moemesto, li.sexy-moemesto:hover, li.sexy-ning, li.sexy-ning:hover, li.sexy-hackernews, li.sexy-hackernews:hover, li.sexy-identica, li.sexy-identica:hover, li.sexy-printfriendly, li.sexy-printfriendly:hover, li.sexy-designbump, li.sexy-designbump:hover, li.sexy-fleck, li.sexy-fleck:hover, li.sexy-netvibes, li.sexy-netvibes:hover, li.sexy-netvouz, li.sexy-netvouz:hover, li.sexy-nujij, li.sexy-nujij:hover, li.sexy-globalgrind, li.sexy-globalgrind:hover, li.sexy-wikio, li.sexy-wikio:hover, li.sexy-xerpi, li.sexy-xerpi:hover, li.sexy-sphinn, li.sexy-sphinn:hover, li.sexy-blogospherenews, li.sexy-blogospherenews:hover, li.sexy-posterous, li.sexy-posterous:hover, li.sexy-techmeme, li.sexy-techmeme:hover, li.sexy-ekudos, li.sexy-ekudos:hover, li.sexy-pingfm, li.sexy-pingfm:hover, li.sexy-tomuse, li.sexy-tomuse:hover, li.sexy-webblend, li.sexy-webblend:hover, li.sexy-wykop, li.sexy-wykop:hover, li.sexy-blogengage, li.sexy-blogengage:hover, li.sexy-hyves, li.sexy-hyves:hover, li.sexy-pusha, li.sexy-pusha:hover, li.sexy-hatena, li.sexy-hatena:hover, li.sexy-mylinkvault, li.sexy-mylinkvault:hover, li.sexy-slashdot, li.sexy-slashdot:hover, li.sexy-squidoo, li.sexy-squidoo:hover, li.sexy-propeller, li.sexy-propeller:hover, li.sexy-faqpal, li.sexy-faqpal:hover, li.sexy-evernote, li.sexy-evernote:hover, li.sexy-meneame, li.sexy-meneame:hover, li.sexy-bitacoras, li.sexy-bitacoras:hover, li.sexy-jumptags, li.sexy-jumptags:hover, li.sexy-bebo, li.sexy-bebo:hover, li.sexy-n4g, li.sexy-n4g:hover, li.sexy-strands, li.sexy-strands:hover, li.sexy-orkut, li.sexy-orkut:hover, li.sexy-tumblr, li.sexy-tumblr:hover, li.sexy-stumpedia, li.sexy-stumpedia:hover, li.sexy-current, li.sexy-current:hover, li.sexy-blogger, li.sexy-blogger:hover, li.sexy-plurk, li.sexy-plurk:hover { background:url('../images/sexy-sprite.png') no-repeat !important; }
