More socialshareprivacy updates.

--- a/src/modules/Socialise/style/admin.css
+++ b/src/modules/Socialise/style/admin.css
@@ -22,3 +22,9 @@
     background: url("../images/sharethis.gif") no-repeat scroll 0 50% transparent;
     padding: 2px 0 2px 20px;
 }
+
+.z-icon-es-socialshareprivacy {
+    background: url("../javascript/socialshareprivacy/images/logo.jpg") no-repeat scroll 0 50% transparent;
+    padding: 2px 0 2px 20px;
+}
+
