--- a/src/modules/Socialise/style/admin.css
+++ b/src/modules/Socialise/style/admin.css
@@ -13,6 +13,12 @@
     padding: 2px 0 2px 20px;
 }
 
+
+.z-icon-es-googleplus {
+    background: url("../images/googleplus.png") no-repeat scroll 0 50% transparent;
+    padding: 2px 0 2px 20px;
+}
+
 .z-icon-es-sexybookmarks {
     background: url("../images/sexybookmarks.png") no-repeat scroll 0 50% transparent;
     padding: 2px 0 2px 20px;
